--- a/templates/python_apps.html
+++ b/templates/python_apps.html
@@ -76,7 +76,29 @@
                         <img src="/static/img/time_preview.png" class="img-responsive" alt="Circus tent">
                     </a>
                 </div>      
-            </div>
+                <div class="col-sm-4 portfolio-item">
+                <h1>String Counter</h1>
+                    <a href="/string_counter" target="_blank" class="portfolio-link" data-toggle="modal">
+                        <div class="caption">
+                            <div class="caption-content">
+                                <i class="fa fa-search-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src="/static/img/time_preview.png" class="img-responsive" alt="Circus tent">
+                    </a>
+                </div>      
+                <div class="col-sm-4 portfolio-item">
+                <h1>String Search</h1>
+                    <a href="/string_search" target="_blank" class="portfolio-link" data-toggle="modal">
+                        <div class="caption">
+                            <div class="caption-content">
+                                <i class="fa fa-search-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src="/static/img/time_preview.png" class="img-responsive" alt="Circus tent">
+                    </a>
+                </div>   
+           </div>
         </div>
     </section>
 
